feat: add wechat config

--- a/.env_example
+++ b/.env_example
@@ -11,3 +11,5 @@ GPTBASE_AI_ID=dd4b1252-1bc3-489e-a115-8eb66f6bf135
 WECHAT_TOKEN=pND1L0MHV4iOl5YxEkj5W
 WECHAT_KEY=VmoaLEiLpLWZUgDTLw1tWwHd5gQjzfyiNO05B3WTNfv
 WECHAT_CORP_ID=ww5613a3cdc3b15b02
+WECHAT_SECRET=kzQFg8Dk-705AHSnEYuSW0EzEOffwiB23cFcmEkiDlA
+WECHAT_AGENT_ID=1000002
