--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,7 +76,7 @@ jobs:
             docker tag <<parameters.repo>>:<<parameters.image_tag>> <<parameters.repo>>:$IMAGE_TAG
             docker push <<parameters.repo>>:<<parameters.image_tag>>
             docker push <<parameters.repo>>:$IMAGE_TAG
-                      
+
   deploy:
     machine:
        image: ubuntu-2004:current
@@ -134,7 +134,17 @@ workflows:
               - /^[0-9]*.wk[0-9]*$/
           # requires:
           #   - backend-install
-          
+      - docker-hub-build-push:
+          name: standalone-build
+          context:
+            - ecr-new
+          path: .
+          dockerfile: Dockerfile
+          repo: gptbasesparticle/gptbase-enterprise-server
+          filters:
+            branches:
+              only:
+                - main    
       - deploy:
           name: dev-backend-deploy
           docker-tag: ""
