修改example中的域名

--- a/.env_example
+++ b/.env_example
@@ -4,9 +4,9 @@ DB_USER=postgres
 DB_PASSWORD=AeEGDB0b7Z5GK0E2tblt
 DB_NAME=gptbase-enterprise
 DB_CHARSET=utf8
-DOMAIN=https://enterprise-dev.gptbase.ai
+DOMAIN=https://enterprise-dev.gbase.ai
 GPTBASE_KEY=ak-2iJbwFIGdElEXDFNWlmYwG8n16WVvcUU1rvNI1a6QJh22kea
-GPTBASE_URL=https://api-dev.gptbase.ai
+GPTBASE_URL=https://api-dev.gbase.ai
 GPTBASE_AI_ID=dd4b1252-1bc3-489e-a115-8eb66f6bf135
 WECHAT_TOKEN=pND1L0MHV4iOl5YxEkj5W
 WECHAT_KEY=VmoaLEiLpLWZUgDTLw1tWwHd5gQjzfyiNO05B3WTNfv
